Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35796

OPT_PAGE_CHECKSUM is ignored if innodb_encrypt_log=ON

    XMLWordPrintable

Details

    • Not for Release Notes
    • This would only affect debug instrumented builds.

    Description

      In the merge of the MDEV-18976 implementation, a logical conflict with MDEV-14425 was resolved incorrectly. The log record parser is reading the contents of an OPTION record without attempting to decrypt it. Unless the first payload octet OPT_PAGE_CHECKSUM happens to encrypt to itself, these record will be ignored. By design, all OPTION records can be ignored without breaking anything.

      In debug-instrumented builds, InnoDB is writing OPT_PAGE_CHECKSUM records so that some recovery errors can be caught better. This bug causes that to be mostly a wasted effort when innodb_encrypt_log=ON.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.